Resolving warnings. Updating security dependencies, removing deprecated code